# asciinema

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Dockerfile  Gemfile  Guardfile  LICENSE.txt  Makefile  README.md  SUMMARY.md  Vagrantfile  build.rs  config.example  default.nix  flake.nix  install  main.go  pyproject.toml  setup.cfg  setup.py  shell.nix  version.go
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml
.github/workflows/: asciinema.yml  ci.yml  pre-commit.yml  release.yml
Godeps/: Godeps.json
Godeps/_workspace/src/code.google.com/p/gcfg/: example_test.go  read.go  set.go
Godeps/_workspace/src/code.google.com/p/gcfg/scanner/: errors.go  example_test.go  scanner.go  scanner_test.go
Godeps/_workspace/src/code.google.com/p/go.crypto/ssh/terminal/: terminal.go
Godeps/_workspace/src/github.com/creack/termios/raw/: raw.go  raw_test.go  termios_32.go  termios_64.go  tioc_bsd.go  tioc_linux.go
Godeps/_workspace/src/github.com/docopt/docopt-go/: .travis.yml  docopt.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/arguments/: arguments_example.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/calculator/: calculator_example.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/config_file/: config_file_example.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/counted/: counted_example.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/git/: git.go
Godeps/_workspace/src/github.com/docopt/docopt-go/examples/naval_fate/: naval_fate.go
Godeps/_workspace/src/golang.org/x/net/html/: example_test.go  node.go  parse.go  parse_test.go  token.go
Godeps/_workspace/src/golang.org/x/net/html/charset/: charset.go  (+2 more)
Godeps/_workspace/src/golang.org/x/text/encoding/: encoding.go  encoding_test.go  example_test.go
Godeps/_workspace/src/golang.org/x/text/runes/: cond.go  cond_test.go  example_test.go  runes.go  runes_test.go
Godeps/_workspace/src/golang.org/x/text/transform/: examples_test.go
api/: api.go  http.go
asciicast/: asciicast.go  frame.go  frame_test.go  player.go  recorder.go  stream.go
asciinema/: __init__.py  __main__.py  _shtab.py  api.py  asciicast.py  async_worker.py  config.py  confirmator.py  encodings.py  fcntl_stub.py  file_writer.py  http_adapter.py  notifier.py  player.py  pty.py  pty_.py  pty_recorder.py  recorder.py  requests_http_adapter.py  stdout.py  term.py  timer.py  uploader.py  urllib_http_adapter.py  util.py
asciinema/asciicast/: __init__.py  events.py  frames.py  raw.py  v1.py  v2.py
asciinema/commands/: auth.py  builder.py  cat.py  command.py  edit.py  error.py  help.py  play.py  record.py  upload.py  version.py
asciinema/tests/: distros.sh  integration.sh  test_config.py  test_helper.py  test_pty.py
asciinema/tests/asciicast/: test_v2.py
asciinema/tests/distros/: Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu
assets/: asciinema-player-ui.min.js  asciinema-player-worker.min.js  asciinema-player.css  asciinema-player.min.js  index.html
aur/: PKGBUILD
cli/: cli.go  cli_test.go  command.go
commands/: auth.go  help.go  play.go  rec.go  rec_test.go  upload.go  version.go
doc/: README.md  asciicast-v1.md  asciicast-v2.md  asciinema.1.md
go/: terminalserver  terminalserver.go
homebrew/: asciinema.rb
man/: Makefile  README.md  asciinema.1  asciinema.1.md  code_of_conduct.md  contributing.md
mime/: asciinema.desktop  x-asciicast.xml  x-asciinema.xml
packaging/aur/: .gitignore  PKGBUILD
pkg/: asciinema-0.9.1.tar.gz.asc  asciinema-0.9.2.tar.gz.asc  asciinema-0.9.3.tar.gz.asc  asciinema-0.9.4.tar.gz.asc  asciinema-0.9.5.tar.gz.asc
ptyx/: size.go
src/: __main__.py  alis.rs  api.rs  asciicast.py  asciicast.rs  asciicast_recorder.py  asciicasts.py  cli.py  cli.rs  config.py  config.rs  constants.py  fd.rs  file_writer.rs  format.rs  forwarder.rs  hash.rs  help_text.py  html.rs  io.rs  leb128.rs  lib.rs  locale.rs  logger.rs  main.rs  notifier.rs  options.py  player.rs  pty.rs  pty_recorder.py  recorder.py  recorder.rs  recorders.py  server.rs  session.rs  socket_writer.rs  status.rs  stdout.py  stream.rs  timed_file.py  (+3 more)
src/asciicast/: util.rs  v1.rs  v2.rs  v3.rs
src/cmd/: auth.rs  cat.rs  convert.rs  mod.rs  play.rs  rec.rs  record.rs  session.rs  stream.rs  upload.rs
src/commands/: builder.py  error.py  help.py  record.py  version.py
src/encoder/: asciicast.rs  mod.rs  raw.rs  txt.rs
src/format/: asciicast.rs  raw.rs
src/output/: asciicast.rs  mod.rs  raw.rs  txt.rs
src/streamer/: alis.rs  forwarder.rs  mod.rs  server.rs  session.rs
src/tty/: default.rs  inspect.rs  macos.rs
terminal/: terminal.go  terminal_test.go  terminal_windows.go
tests/: auth_command_test.py  builder_test.py  cast_decoders_test.py  config_test.py  confirmator_test.py  demo.cast  demo.cast.bz2  demo.json  demo.json.bz2  distros.sh  edit_test.py  error_command_test.py  help_command_test.py  integration.sh  pty_recorder_test.py  pty_test.py  record_command_test.py  recorder_test.py  requests_http_adapter_test.py  stdout_test.py  test_helper.py  timer_test.py  uploader_test.py  version_command_test.py  vim.json
tests/asciicast/: v2_test.py
tests/casts/: demo.json  full-v1.json  full-v2.cast  full-v3.cast  full.cast  full.json  minimal-v1.json  minimal-v2.cast  minimal-v3.cast  nulls-v1.json  nulls-v2.cast
tests/commands/: auth_test.py  builder_test.py  error_test.py  help_test.py  record_test.py  version_test.py
tests/distros/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu
util/: cfg.go  cfg_test.go  copy.go  copy_windows.go  echo.go  fdset_freebsd.go  fdset_freebsd_amd64.go  fdset_linux.go  fdset_linux_386.go  fdset_linux_amd64.go  locale.go  locale_test.go  nonblank.go  readline.go  select.go  select_darwin.go  select_linux.go  spinner.go  uuid.go
(+36 files in other folders)
