[package]
name = "asciinema"
version = "3.0.0-rc.4"
edition = "2021"
authors = ["Marcin Kulik <m@ku1ik.com>"]
homepage = "https://asciinema.org"
repository = "https://github.com/asciinema/asciinema"
description = "Terminal session recorder"
license = "GPL-3.0"

# MSRV
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
nix = { version = "0.30", features = ["fs", "term", "process", "signal", "poll"] }
termion = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
signal-hook = { version = "0.3.17", default-features = false }
uuid = { version = "1.6.1", features = ["v4"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json"] }
rustyline = "13.0.0"
config = { version = "0.15.11", default-features = false, features = ["toml", "ini"] }
which = "6.0.3"
tempfile = "3.9.0"
scraper = { version = "0.23.1", default-features = false }
avt = "0.15.1"
axum = { version = "0.8.4", default-features = false, features = ["http1", "ws"] }
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
rust-embed = "8.2.0"
mime_guess = "2.0.4"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rgb = "0.8.37"
url = "2.5.0"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23.26", default-features = false, features = ["aws_lc_rs"] }
tokio-util = "0.7.10"

[build-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
clap_mangen = "0.2.26"
url = "2.5.0"

[profile.release]
strip = true
