[package]
name = "asciinema"
version = "3.0.1"
edition = "2021"
authors = ["Marcin Kulik <m@ku1ik.com>"]
homepage = "https://asciinema.org"
repository = "https://github.com/asciinema/asciinema"
description = "Terminal session recorder, streamer, and player"
license = "GPL-3.0-or-later"

# MSRV
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0"
nix = { version = "0.30", features = ["fs", "term", "process", "signal", "poll"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
signal-hook = { version = "0.3", default-features = false }
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "multipart", "gzip", "json", "stream"] }
rustyline = { version = "14.0", default-features = false }
config = { version = "0.15", default-features = false, features = ["toml"] }
which = "8.0"
tempfile = "3.0"
avt = "0.16"
axum = { version = "0.8", default-features = false, features = ["http1", "ws"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "sync", "time", "fs", "process"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync", "time"] }
rust-embed = "8.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "env-filter"] }
rgb = { version = "0.8", default-features = false }
url = "2.5"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.9"
async-trait = "0.1"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
bytes = "1.0"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["alloc", "std"] }

[build-dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
clap_complete = "4.0"
clap_mangen = "0.2"
url = "2.5"

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
macos-tty = []
