[metadata]
name = asciinema
version = 2.4.0
author = Marcin Kulik
author_email = m@ku1ik.com
url = https://asciinema.org
download_url =
    https://github.com/asciinema/asciinema/archive/v%(version)s.tar.gz
description = Terminal session recorder
description_file = README.md
license = GNU GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities

[options]
include_package_data = True
packages =
    asciinema
    asciinema.asciicast
    asciinema.commands
install_requires =

[options.package_data]
asciinema = data/*.png

[options.entry_points]
console_scripts =
    asciinema = asciinema.__main__:main

[options.data_files]
share/doc/asciinema =
    CHANGELOG.md
    CODE_OF_CONDUCT.md
    CONTRIBUTING.md
    README.md
    doc/asciicast-v1.md
    doc/asciicast-v2.md
share/man/man1 =
    man/asciinema.1
share/mime/packages =
    mime/x-asciicast.xml
share/applications =
    mime/asciinema.desktop
share/icons/hicolor/256x256/mimetypes =
    asciinema/data/application-x-asciicast.png

[pycodestyle]
ignore = E501,E402,E722
